[package]
name = "eather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
async-trait = "0.1.68"
base-x = "0.2.11"
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.10", features = ["derive"] }
ed25519 = "2.2.1"
ed25519-dalek = "1.0.1"
env_logger = "0.10.0"
fuser = "0.12.0"
futures = "0.3.28"
home = "0.5.5"
libc = "0.2.146"
log = "0.4.19"
object_store = { version = "0.6.1", features = ["serde"] }
parking_lot = "0.12.1"
rand = "0.7.3"
ring = "0.16.20"
rmp-serde = "1.1.1"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"

[dev-dependencies]
tokio-test = "*"
